--- a/dwm.desktop
+++ b/dwm.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=dwm
 Comment=Dynamic window manager
-Exec=dwm
-Icon=dwm
 Type=XSession
+Exec=dwm
+TryExec=dwm
+DesktopNames=dwm
